# vec

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  main.cpp
.github/workflows/: cmake.yml
examples/: target_hit_detection.cpp
include/: mat.hpp  transform.hpp  utils.hpp  vec.hpp
tests/: test_guidelines.md  test_mat_basic.cpp  test_mat_friends.cpp  test_mat_operators.cpp  test_test_utils.cpp  test_transform.cpp  test_vec.cpp  test_vec_basic.cpp  test_vec_friends.cpp  test_vec_operators.cpp
tests/test_utils/: test_utils.hpp  test_utils_mat.hpp  test_utils_vec.hpp
